--- a/main/desafios-de-projeto/EletricCar/app/src/main/res/values/strings.xml
+++ b/main/desafios-de-projeto/EletricCar/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">EletricCar</string>
+    <string name="title">Eletric Car</string>
+    <string name="cars">Carros</string>
+    <string name="favorites">Favoritos</string>
+    <string name="preco">Preço</string>
+    <string name="bateria">Bateria</string>
+    <string name="potencia">Potência</string>
+    <string name="recarga">Recarga</string>
+    <string name="preco_kwh">Preço Kwh</string>
+    <string name="km_percorrido">Km percorrido</string>
+    <string name="calcular">Calcular</string>
 </resources>
