Finaliza introdução a MultiScreen por meio dos Fragments

--- a/main/desafios-de-projeto/EletricCar/app/src/main/res/values/strings.xml
+++ b/main/desafios-de-projeto/EletricCar/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="km_percorrido">Km percorrido</string>
     <string name="calcular">Calcular</string>
     <string name="calcular_autonomia">Calcular Autonomia</string>
+    <string name="cd_calcular">Botão de calcular autonomia</string>
 </resources>
