--- a/main/desafios-de-projeto/EletricCar/app/src/main/res/values/strings.xml
+++ b/main/desafios-de-projeto/EletricCar/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="calcular">Calcular</string>
     <string name="calcular_autonomia">Calcular Autonomia</string>
     <string name="cd_calcular">Botão de calcular autonomia</string>
+    <string name="no_wifi">Ops, internet não disponível</string>
 </resources>
