--- a/main/desafios-de-projeto/EletricCar/app/src/main/res/values/strings.xml
+++ b/main/desafios-de-projeto/EletricCar/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="calcular_autonomia">Calcular Autonomia</string>
     <string name="cd_calcular">Botão de calcular autonomia</string>
     <string name="no_wifi">Ops, internet não disponível</string>
+    <string name="response_error">Algo deu errado, por favor tente novamente mais tarde</string>
 </resources>
