--- a/main/desafios-de-projeto/EletricCar/app/src/main/res/values/strings.xml
+++ b/main/desafios-de-projeto/EletricCar/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="calcular">Calcular</string>
     <string name="calcular_autonomia">Calcular Autonomia</string>
     <string name="cd_calcular">Botão de calcular autonomia</string>
+    <string name="cd_favorite">Botão de favorito</string>
     <string name="no_wifi">Ops, internet não disponível</string>
     <string name="response_error">Algo deu errado, por favor tente novamente mais tarde</string>
+    <string name="saved_cal">saved_cal</string>
 </resources>
